fixed spacing issues on some views.

--- a/app/assets/stylesheets/drivers.scss
+++ b/app/assets/stylesheets/drivers.scss
@@ -63,8 +63,8 @@ a {
   text-decoration: none;
 }
 
-.drive_list {
-  font-size: 1.2em;
+#drive_list {
+  font-size: 1.5em;
 }
 
 .driver_list {
