--- a/app/assets/stylesheets/passengers.scss
+++ b/app/assets/stylesheets/passengers.scss
@@ -42,3 +42,11 @@ h2 {
   justify-content: flex-end;
   padding: 30px;
 }
+
+#pass_list {
+  font-size: 1.5em;
+}
+
+.passenger_list {
+  margin-left: 2em;
+}
